--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
+@import "tailwindcss";
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
-
+.error{
+  color: red;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
